// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationship Fetching Test: multi added and loaded 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "value": [
    4,
    7
  ],
  "relatedObject": [
    {
      "myString": "myText 4",
      "myNum": 424,
      "id": 4
    },
    {
      "myString": "myText 7",
      "myNum": 427,
      "id": 7
    }
  ],
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          }
        ]
      }
    ]
  },
  "displayMode": 0,
  "lastUsed": [
    7
  ]
}
</div>
`;

exports[`Relationship Fetching Test: multi added but not yet loaded 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "value": [
    4,
    7
  ],
  "relatedObject": [
    {
      "myString": "myText 4",
      "myNum": 424,
      "id": 4
    },
    null
  ],
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          }
        ]
      }
    ]
  },
  "displayMode": 0,
  "lastUsed": [
    7
  ]
}
</div>
`;

exports[`Relationship Fetching Test: multi load with none missing 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "value": [
    3,
    4,
    5
  ],
  "relatedObject": [
    {
      "myString": "myText 3",
      "myNum": 423,
      "id": 3
    },
    {
      "myString": "myText 4",
      "myNum": 424,
      "id": 4
    },
    {
      "myString": "myText 5",
      "myNum": 425,
      "id": 5
    }
  ],
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship Fetching Test: multi load with one missing 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "value": [
    3,
    4,
    5
  ],
  "relatedObject": [
    {
      "myString": "myText 3",
      "myNum": 423,
      "id": 3
    },
    null,
    {
      "myString": "myText 5",
      "myNum": 425,
      "id": 5
    }
  ],
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship Fetching Test: multi removed one 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "value": [
    3,
    4
  ],
  "relatedObject": [
    {
      "myString": "myText 3",
      "myNum": 423,
      "id": 3
    },
    {
      "myString": "myText 4",
      "myNum": 424,
      "id": 4
    }
  ],
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship Fetching Test: multi removed two 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedByMulti",
    "type": 14,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "value": [
    4
  ],
  "relatedObject": [
    {
      "myString": "myText 4",
      "myNum": 424,
      "id": 4
    }
  ],
  "searchForm": {
    "model": "searchFor.ownedByMulti",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship Fetching Test: nothing set yet 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedBy",
    "type": 13,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "searchForm": {
    "model": "searchFor.ownedBy",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship Fetching Test: set to first creation loaded 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedBy",
    "type": 13,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "value": 1,
  "relatedObject": {
    "myString": "myText 1",
    "myNum": 421,
    "id": 1
  },
  "searchForm": {
    "model": "searchFor.ownedBy",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship Fetching Test: set to first creation not loaded yet 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedBy",
    "type": 13,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "value": 0,
  "searchForm": {
    "model": "searchFor.ownedBy",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          }
        ]
      }
    ]
  }
}
</div>
`;

exports[`Relationship Fetching Test: set to invalid value 1`] = `
<div
  class="show"
>
  {
  "field": {
    "mapTo": "ownedBy",
    "type": 13,
    "validate": {
      "relationshipCollection": "simpleTestCol",
      "relationshipNamePath": "myString"
    }
  },
  "value": "INVALID",
  "searchForm": {
    "model": "searchFor.ownedBy",
    "collection": "simpleTestCol",
    "sections": [
      {
        "fields": [
          {
            "mapTo": "myString",
            "type": 2,
            "validate": {}
          }
        ]
      }
    ]
  }
}
</div>
`;
